
syntax = "proto3";

// define the proto package name - tell protoc to generate code in this package
// But in Java, also have to specify the full package name using option java_package
package types;
// define the package name for generated class
option java_package = "com.example.grpcplayground.models.types.singleobject";
option java_multiple_files = true;


message PersonSingle {

  string full_name = 1;
  int32 age = 2;
  string email = 3;
  bool employed = 4;
  double salary = 5;
  int64 bank_account_number = 6;
  sint32 balance = 7;
  repeated string hobbies = 8; // List of hobbies
  map<string, string> attributes = 9; // Map of attributes
  bytes profile_picture = 10; // Binary data for profile picture
  oneof contact {
    string phone_number = 11;
    string alternate_email = 12;
  }

}